# WaferDefectDetectionSystem-Mobilenetv4-

./: .gitignore  README.md  project_learning_guide.md
WaferDefectProject/: Local_Run_Guide.md  SERVER_HANDOVER.md  SERVER_RUNBOOK.md  VSCode_Click_Run_Guide.md  export_onnx.py  train.py  verify_tensorrt.py
WaferDefectProject/cpp_inference/: CMakeLists.txt  build_and_run.ps1  main.cpp  preprocess.cu
WaferDefectProject/src/: dataset.py  model.py
